# voice-memo

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  pytest.ini  voice-memo.md
.github/workflows/: ci.yml  copilot-review.yml  release.yml
tests/: test_config.py  test_diarize.py  test_hotkey.py  test_platform.py  test_recorder.py  test_server.py  test_summarize.py  test_transcribe.py
voice_memo/: cli.py  config.py  diarize.py  hotkey.py  recorder.py  server.py  storage.py  summarize.py  transcribe.py
