[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-memo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sounddevice",
    "numpy",
    "fastapi",
    "uvicorn",
    "faster-whisper",
    "filelock",
    "pyyaml",
    "click",
    "pynput>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
]
diarize = [
    "pyannote.audio",
]

[project.scripts]
vmemo = "voice_memo.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-p", "no:launch_testing",
    "-p", "no:launch_ros",
    "-p", "no:ament_pep257",
    "-p", "no:ament_flake8",
    "-p", "no:ament_xmllint",
    "-p", "no:ament_lint",
    "-p", "no:ament_copyright",
]
